# concom

./: .env.build  .gitignore  .prototools  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  moon.yml  rust-toolchain.toml
.moon/: toolchains.yml  workspace.yml
src/: command.rs  commit.rs  generated.rs  lib.rs  main.rs  steps.rs  utils.rs
src/steps/: action.rs  body.rs  breaking_change.rs  conv_type.rs  description.rs  gitmoji.rs  message.rs  scope.rs
src/utils/: styles.rs  truncate.rs
