[package]
name = "concom"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.44"
fuzzy-matcher = "0.3.7"
inquire = { version = "0.9.4", features = ["date", "editor", "macros", "crossterm"]}
inquire-derive = "0.9.4"
crossterm = "0.29"

[build-dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3", features = ["native-tls"] }
